--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(user) do |f| %>
+<%= form_for(user, html: { class: "directUpload", data: { 'form-data' => (@s3_direct_post.fields), 'url' => @s3_direct_post.url, 'host' => URI.parse(@s3_direct_post.url).host }}) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :avatar_url %>
-    <%= f.text_field :avatar_url %>
+    <%= f.file_field :avatar_url %>
   </div>
 
   <div class="actions">
